# python-project-49

./: README.md  pyproject.toml
brain_games/: __init__.py  calc_mod.py  cli.py  engine.py  even_mod.py  gcd_mod.py  prime_mod.py  progression_mod.py
brain_games/games/: calc_mod.py  even_mod.py  gcd_mod.py  prime_mod.py  progression_mod.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_main.py  brain_prime.py  brain_progression.py
